# sageteamail

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  Jenkinsfile  README.md  build.sh  clickable.json  clickable.yaml  requirements.txt  sageteamail.qbs.in
SageteaMail/: mail.qbs  sageteaMail.qbs
SageteaMail/app/: SageteaMail.cpp  SageteaMail.h  app.qbs  (+3 more)
click/: CMakeLists.txt  click.qbs  manifest.json.in  sageteamail-helper.json  sageteamail.apparmor  sageteamail.sagetea_sageteamail.application  sageteamail2.desktop.in  sageteamail2.url-dispatcher  sageteamaild-launch  sageteamaild.desktop  sageteamailhelper-aa.json  sagetemail.sagetea_sagetemail.application  sagetemail.sagetea_sagetemail.service  set-version
click/openstore/: sageteamail2.apparmor
docs/: Architecture.md  MainPage.md  _config.yml  arch_client_service_actions.md  arch_composer.md  arch_composer_store.md  arch_dekko.md  arch_dekkoworker.md  arch_processes.md  arch_stores.md  arch_ubuntu-ui-plugin.md  arch_workers.md  autoconfig.md  codingstyle.md  core_dumps.md  dekkod_logging.md  designs.md
i18n/: af.ts  am.ts  ar.ts  ast.ts  be.ts  bn_BD.ts  bs.ts  ca.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  en_GB.ts  en_US.ts  eo.ts  es.ts  et.ts  eu.ts  fi.ts  fr.ts  gd.ts  gl.ts  gu.ts  he.ts  hu.ts  hy.ts  ia.ts  id.ts  it.ts  ja.ts  kmr.ts  ko.ts  ku.ts  lt.ts  ml.ts  nb.ts  nds.ts  nl.ts  or.ts  (+20 more)
plugins/: plugins.qbs
scripts/: generate-services.sh  run-sageteamail2  run-sagetemail2  update-i18n
snap/: sageteamail.launcher  snapcraft.yaml
upstream/: third-party.qbs
(+451 files in other folders)
